# PrismRerankerV1

./: CLAUDE.md  README.md  infer_on_test_data.py  infer_on_test_data_hf.py  infer_on_test_data_sglang.py  keyword_examples.txt  keywords_preview.txt  local_infer.py  main.py  pyproject.toml  rerank_evaluate.xlsx  sync_to_remote.sh  t.py  webui.py
docs/: Reranker threshold methodology.md  Reranker threshold results.md  merged_annotations_format.md  search_data_description.md
get_rerank_teacher_scores/: __main__.py  run.py  scorer.py
pred_quality_eval/: README.md  __init__.py  evaluate.py  summarize.py
prism_rerank_evaluation/: README.md  __init__.py  __main__.py  beir.py
process_data/: exa_web_search.py  extract_queries.py  filter_kalm_by_teacher_rerank_score.py  get_sft_test_data.py  kalm_to_list_wise_train_data.py  migrate_annotated_to_long.py  process_kalm.py  query_to_keywords.py  stats_query_document_pairs.py  step1_process_kalm.py  step2_tavily_web_search.py  step2_zhipu_web_search.py  step3_reprocess_web_search_data.py  step5_query_to_keywords.py  step6_extract_query_document_pair_from_topk_data.py  step7_annotate_relevance.py  step8_merge_annotations.py  step9_generate_contribution_evidence.py  step_final_get_final_training_data.py  tavily_web_search.py
process_data_extend2/: extract_instructions.py  instruction2query.py  step2_exa_web_search.py  step2_tavily_web_search.py  step3_reprocess_web_search_data.py  step5_query_to_keywords.py  step6_extract_query_document_pair_from_topk_data.py  step7_annotate_relevance.py  step8_merge_annotations.py  step9_generate_contribution_evidence.py
rank_evaluate/: README.md  __init__.py  __main__.py  checkpoint.py  config.py  cuda_libs.py  data_loader.py  evaluation_results.xlsx  evaluator.py  metrics.py  model_registry.py  report.py  report_from_cache.py  run.py
(+126 files in other folders)
